s3fuse (0.10) unstable; urgency=low

  * Updated usage/help message printed by main() to match arguments.

 -- Tarick Bedeir <tarick@bedeir.com>  Thu, 30 Jun 2011 11:29:57 -0500

s3fuse (0.9) unstable; urgency=low

  * Moved to libxml++.

 -- Tarick Bedeir <tarick@bedeir.com>  Sun, 12 Jun 2011 17:43:26 -0500

s3fuse (0.1) unstable; urgency=low

  * Initial Release.

 -- Tarick Bedeir <tarick@bedeir.com>  Wed, 01 Jun 2011 17:06:31 -0500